--- a/web/package.json
+++ b/web/package.json
@@ -1,41 +1,48 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^4.32.6",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.4.0",
-    "eslint-config-next": "13.4.13",
-    "moment": "^2.29.4",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "zustand": "^4.4.1"
-  },
-  "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.16",
-    "@tanstack/react-query-devtools": "^4.32.6",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^1.0.1",
-    "eslint-plugin-react": "^7.33.1",
-    "prettier": "3.0.1",
-    "typescript": "^5.1.6"
-  }
+	"name": "web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"check-types": "tsc --pretty --noEmit",
+		"check-format": "prettier --check .",
+		"check-lint": "eslint . --ext ts --ext tsx --ext js",
+		"format": "prettier --write .",
+		"test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^4.32.6",
+		"@types/node": "20.5.0",
+		"@types/react": "18.2.20",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.15",
+		"axios": "^1.4.0",
+		"eslint-config-next": "13.4.13",
+		"moment": "^2.29.4",
+		"next": "13.4.13",
+		"postcss": "8.4.27",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss": "3.3.3",
+		"zustand": "^4.4.1"
+	},
+	"devDependencies": {
+		"@next/eslint-plugin-next": "^13.4.16",
+		"@tanstack/react-query-devtools": "^4.32.6",
+		"@typescript-eslint/eslint-plugin": "^6.4.0",
+		"@typescript-eslint/parser": "^6.4.0",
+		"eslint": "^8.47.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-config-xo": "^0.43.1",
+		"eslint-config-xo-typescript": "^1.0.1",
+		"eslint-plugin-react": "^7.33.1",
+		"prettier": "3.0.1",
+		"typescript": "^5.1.6",
+		"husky": "^8.0.0"
+	}
 }
