--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
 		"check-lint": "eslint . --ext ts --ext tsx --ext js",
 		"format": "prettier --write .",
 		"test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
-		"prepare": "husky install"
+		"prepare": "cd .. && husky install web/.husky"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^4.32.6",
