--- a/web/package.json
+++ b/web/package.json
@@ -21,11 +21,13 @@
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
 		"axios": "^1.4.0",
+		"chart.js": "^4.3.3",
 		"eslint-config-next": "13.4.13",
 		"moment": "^2.29.4",
 		"next": "13.4.13",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "18.2.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
@@ -41,8 +43,8 @@
 		"eslint-config-xo": "^0.43.1",
 		"eslint-config-xo-typescript": "^1.0.1",
 		"eslint-plugin-react": "^7.33.1",
+		"husky": "^8.0.0",
 		"prettier": "3.0.1",
-		"typescript": "^5.1.6",
-		"husky": "^8.0.0"
+		"typescript": "^5.1.6"
 	}
 }
