--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"test": "jest --watch",
 		"check-types": "tsc --pretty --noEmit",
 		"check-format": "prettier --check .",
 		"check-lint": "eslint . --ext ts --ext tsx --ext js",
@@ -36,6 +37,10 @@
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^13.4.16",
 		"@tanstack/react-query-devtools": "^4.32.6",
+		"@testing-library/jest-dom": "^6.0.0",
+		"@testing-library/react": "^14.0.0",
+		"@types/jest": "^29.5.3",
+		"@types/mocha": "^10.0.1",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
 		"eslint": "^8.47.0",
@@ -44,6 +49,8 @@
 		"eslint-config-xo-typescript": "^1.0.1",
 		"eslint-plugin-react": "^7.33.1",
 		"husky": "^8.0.0",
+		"jest": "^29.6.2",
+		"jest-environment-jsdom": "^29.6.2",
 		"prettier": "3.0.1",
 		"typescript": "^5.1.6"
 	}
