--- a/web/package.json
+++ b/web/package.json
@@ -43,6 +43,7 @@
 		"@types/mocha": "^10.0.1",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
+		"axios-mock-adapter": "^1.21.5",
 		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-config-xo": "^0.43.1",
@@ -51,6 +52,7 @@
 		"husky": "^8.0.0",
 		"jest": "^29.6.2",
 		"jest-environment-jsdom": "^29.6.2",
+		"msw": "^1.2.3",
 		"prettier": "3.0.1",
 		"typescript": "^5.1.6"
 	}
