--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
 		"autoprefixer": "10.4.15",
 		"axios": "^1.4.0",
 		"chart.js": "^4.3.3",
+		"chartjs-plugin-annotation": "^3.0.1",
 		"eslint-config-next": "13.4.13",
 		"moment": "^2.29.4",
 		"next": "13.4.13",
