--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
 		"@testing-library/jest-dom": "^6.0.0",
 		"@testing-library/react": "^14.0.0",
 		"@types/jest": "^29.5.3",
+		"@types/lodash": "^4.14.197",
 		"@types/mocha": "^10.0.1",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
@@ -53,6 +54,7 @@
 		"husky": "^8.0.0",
 		"jest": "^29.6.2",
 		"jest-environment-jsdom": "^29.6.2",
+		"lodash": "^4.17.21",
 		"msw": "^1.2.3",
 		"prettier": "3.0.1",
 		"typescript": "^5.1.6"
