--- a/web/package.json
+++ b/web/package.json
@@ -28,10 +28,12 @@
 		"eslint-config-next": "13.4.13",
 		"moment": "^2.29.4",
 		"next": "13.4.13",
+		"plotly.js": "^2.26.0",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "18.2.0",
+		"react-plotly.js": "^2.6.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"zustand": "^4.4.1"
@@ -44,6 +46,7 @@
 		"@types/jest": "^29.5.3",
 		"@types/lodash": "^4.14.197",
 		"@types/mocha": "^10.0.1",
+		"@types/react-plotly.js": "^2.6.0",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
 		"axios-mock-adapter": "^1.21.5",
